crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_columns_snapshot@nullable_columns_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 167
expression: rendered
---
export const profiles = pgTable("profiles", {
  id: serial("id").primaryKey(),
  bio: text("bio"),
  avatarUrl: varchar("avatar_url", { length: 500 }),
});
