crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_columns_snapshot@nullable_columns_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const profiles = pgTable("profiles", {
  id: integer("id").primaryKey().generatedByDefaultAsIdentity(),
  bio: text("bio"),
  avatarUrl: varchar("avatar_url", { length: 500 }),
});
