crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_columns_snapshot@nullable_columns_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Profiles struct {
	ID        int32   `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
	Bio       *string `gorm:"column:bio;type:text" json:"bio"`
	AvatarUrl *string `gorm:"column:avatar_url;size:500" json:"avatar_url"`
}

func (Profiles) TableName() string { return "profiles" }
