crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_columns_snapshot@nullable_columns_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 164
expression: rendered
---
model Profiles {
  id Int @id @default(autoincrement())
  bio String?
  avatar_url String?

  @@map("profiles")
}
