crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_columns_snapshot@nullable_columns_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "profiles")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub bio: Option<String>,
    pub avatar_url: Option<String>,
}

vespera::schema_type!(Schema from Model, name = "ProfilesSchema");
impl ActiveModelBehavior for ActiveModel {}
