crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_enum_snapshot@nullable_enum_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class StatusType(models.TextChoices):
    ACTIVE = "active"
    INACTIVE = "inactive"

class NullableEnum(models.Model):
    id = models.IntegerField(primary_key=True)
    status = models.CharField(max_length=8, choices=StatusType.choices, null=True, blank=True)

    class Meta:
        managed = False
        db_table = "nullable_enum"
