crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__nullable_enum_snapshot@nullable_enum_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const nullableEnumStatusType = pgEnum("nullable_enum_status_type", ["active", "inactive"]);

export const nullableEnum = pgTable("nullable_enum", {
  id: integer("id").primaryKey(),
  status: nullableEnumStatusType("status"),
});
